# protoc-gen-kts

./: .gitignore  CMakeLists.txt  README.md  build.gradle  gradle.properties  protoc-gen-kts.cc  settings.gradle
.github/workflows/: publish.yml  release.yml
models/: compile.sh  complex.proto  complex.proto.kt  naming.proto  naming.proto.kt  scalar.proto  scalar.proto.kt
src/: Main.cc
src/main/cpp/: protoc-gen-kts.cc
